improved project part 5

--- a/csce242/projects/part 5/Games.html
+++ b/csce242/projects/part 5/Games.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Header Section with Navigation -->
     <header>
         <nav>
             <ul>
@@ -18,34 +19,36 @@
         </nav>
     </header>
 
+    <!-- Games Section Displaying Popular Games -->
     <section class="games">
         <h1>Video Games</h1>
         <div class="game-list">
+            <!-- Game Cards -->
             <div class="game-card">
                 <h2>Super Mario</h2>
-                <img src="../part 3/images/mario.jpg" alt="Mario">
+                <img src="images/mario.jpg" alt="Mario" class="game-image">
                 <p>A classic platformer featuring Mario and his adventures in the Mushroom Kingdom.</p>
             </div>
             <div class="game-card">
                 <h2>Halo</h2>
-                <img src="../part 4/images/halo 3.jpg" alt="Master Chief">
+                <img src="images/halo3.jpg" alt="Master Chief" class="game-image">
                 <p>A sci-fi shooter where you play as Master Chief, fighting to save humanity.</p>
             </div>
             <div class="game-card">
                 <h2>Sonic the Hedgehog</h2>
-                <img src="../part 4/images/sonic frontiers.jpg" alt="Sonic the Hedgehog">
+                <img src="images/sonic.jpg" alt="Sonic the Hedgehog" class="game-image">
                 <p>Speed through levels as Sonic, battling Dr. Robotnik and saving animals.</p>
             </div>
             <div class="game-card">
                 <h2>The Legend of Zelda</h2>
-                <img src="../part 4/images/breath of wid.jpg" alt="Link">
+                <img src="images/zelda.jpg" alt="Link" class="game-image">
                 <p>Embark on epic quests as Link, solving puzzles and battling monsters.</p>
             </div>
-            <!-- Add more game cards as needed -->
         </div>
     </section>
 
-    <section>
+    <!-- Popular Genres Section -->
+    <section class="genres">
         <h2>Popular Genres</h2>
         <ul class="genre-list">
             <li><strong>Action-Adventure:</strong> Games that combine action with adventure elements.</li>
@@ -56,26 +59,38 @@
         </ul>
     </section>
 
-    <section>
+    <!-- Recent Releases Section -->
+    <section class="recent-releases">
         <h2>Recent Releases</h2>
-        <div class="recent-releases">
-            <div class="release-card">
-                <h3>Tekken 8 </h3>
-                <p>Release Date: 2024</p>
-            </div>
-            <div class="release-card">
-                <h3>The Last of Us Part 2 Remastered</h3>
-                <p>Release Date: 2024</p>
-            </div>
-            <div class="release-card">
-                <h3>Palworld</h3>
-                <p>Release Date: 2024</p>
-            </div>
+        <div class="release-card">
+            <h3>Tekken 8</h3>
+            <p>Release Date: 2024</p>
+        </div>
+        <div class="release-card">
+            <h3>The Last of Us Part 2 Remastered</h3>
+            <p>Release Date: 2024</p>
+        </div>
+        <div class="release-card">
+            <h3>Palworld</h3>
+            <p>Release Date: 2024</p>
         </div>
     </section>
-
+         <!-- Footer Navigation Section -->
+   <aside id="footer-navigation" class="footer-widget">
+    <h3 class="widget-title">Quick Links</h3>
+    <div class="menu-footer-container">
+        <ul class="menu">
+            <li class="menu-item"><a href="index.html">Home</a></li>
+            <li class="menu-item"><a href="characters.html">Characters</a></li>
+            <li class="menu-item"><a href="Games.html">Games</a></li>
+            <li class="menu-item"><a href="about.html">About Us</a></li>
+            <li class="menu-item"><a href="contact us.html">Contact Us</a></li>
+        </ul>
+    </div>
+</aside>
+    <!-- Footer Section -->
     <footer>
-        <p>Mauriciono © 2024</p>
+        <p>&copy; Mauriciono 2024</p>
     </footer>
 </body>
 </html>
