--- a/csce242/projects/part 5/about.html
+++ b/csce242/projects/part 5/about.html
@@ -6,7 +6,7 @@
     <title>About Us - Video Game Character Hub</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="about-page">
     <header>
         <nav>
             <ul>
@@ -18,7 +18,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="centered-content">
         <section class="about-intro">
             <h1>About Video Game Character Hub</h1>
             <p>This website is dedicated to providing information on video game characters. Whether you are a casual gamer or a hardcore enthusiast, this platform is here to enhance your knowledge of your favorite characters.</p>
@@ -49,7 +49,19 @@
             <p>Contact us via our <a href="contact us.html">Contact Us</a> page for more details!</p>
         </section>
     </main>
-
+<!-- Footer Navigation Section -->
+<aside id="footer-navigation" class="footer-widget">
+    <h3 class="widget-title">Quick Links</h3>
+    <div class="menu-footer-container">
+        <ul class="menu">
+            <li class="menu-item"><a href="index.html">Home</a></li>
+            <li class="menu-item"><a href="characters.html">Characters</a></li>
+            <li class="menu-item"><a href="Games.html">Games</a></li>
+            <li class="menu-item"><a href="about.html">About Us</a></li>
+            <li class="menu-item"><a href="contact us.html">Contact Us</a></li>
+        </ul>
+    </div>
+</aside>
     <footer>
         <p>Mauriciono © 2024</p>
     </footer>
