--- a/csce242/exercises/08_loops/index.html
+++ b/csce242/exercises/08_loops/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Markers</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -23,7 +23,20 @@
       </nav>
     </header>
 
-    <main id="main-content" class="columns"></main>
+    <main id="main-content" class="columns">
+      <div>
+        <p>
+          <label for="txt-first-num">Start: </label>
+          <input type="number" id="txt-first-num">
+        </p>
+        <p>
+          <label for="txt-last-num">End: </label>
+          <input type="number" id="txt-last-num">
+        </p>
+        <button id="btn-loop">Loop</button>
+        <ul id="numbers"></ul>
+      </div>
+    </main>
 
     <footer id="main-footer">
       <p>Goodbye</p>
