--- a/csce242/projects/part 5/character-details.html
+++ b/csce242/projects/part 5/character-details.html
@@ -6,7 +6,9 @@
     <title>Character Details - Video Game Character Hub</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="character-details-page">
+
+    <!-- Navigation Bar -->
     <header>
         <nav>
             <ul>
@@ -18,48 +20,86 @@
         </nav>
     </header>
 
+    <!-- Character Details Section -->
     <section class="character-details">
         <h1>Character Details</h1>
 
-        <div class="character-card">
-            <img src="../part 3/images/master chief.jpg" alt="Master Chief">
-            <h2>Master Chief</h2>
-            <p><strong>Game:</strong> Halo</p>
-            <p><strong>Description:</strong> A super soldier dedicated to saving humanity.</p>
-            <p><strong>Abilities:</strong> Super strength, advanced combat skills, and tactical intelligence.</p>
-            <p><strong>Trivia:</strong> Known for his iconic green armor and helmet.</p>
-        </div>
+        <!-- Updated character card structure for better layout -->
+        <div class="character-cards-container">
+            <!-- Master Chief -->
+            <div class="character-card">
+                <div class="character-image">
+                    <img src="../part 3/images/master chief.jpg" alt="Master Chief">
+                </div>
+                <div class="character-info">
+                    <h2>Master Chief</h2>
+                    <p><strong>Game:</strong> Halo</p>
+                    <p><strong>Description:</strong> A super soldier dedicated to saving humanity.</p>
+                    <p><strong>Abilities:</strong> Super strength, advanced combat skills, and tactical intelligence.</p>
+                    <p><strong>Trivia:</strong> Known for his iconic green armor and helmet.</p>
+                </div>
+            </div>
 
-        <div class="character-card">
-            <img src="../part 3/images/mario.jpg" alt="Mario">
-            <h2>Mario</h2>
-            <p><strong>Game:</strong> Super Mario</p>
-            <p><strong>Description:</strong> A plumber who goes on adventures to rescue Princess Peach.</p>
-            <p><strong>Abilities:</strong> Superhuman agility, jumping, and power-ups like Fire Flower.</p>
-            <p><strong>Trivia:</strong> His first appearance was in the 1981 arcade game Donkey Kong.</p>
-        </div>
+            <!-- Mario -->
+            <div class="character-card">
+                <div class="character-image">
+                    <img src="../part 3/images/mario.jpg" alt="Mario">
+                </div>
+                <div class="character-info">
+                    <h2>Mario</h2>
+                    <p><strong>Game:</strong> Super Mario</p>
+                    <p><strong>Description:</strong> A plumber who goes on adventures to rescue Princess Peach.</p>
+                    <p><strong>Abilities:</strong> Superhuman agility, jumping, and power-ups like Fire Flower.</p>
+                    <p><strong>Trivia:</strong> His first appearance was in the 1981 arcade game Donkey Kong.</p>
+                </div>
+            </div>
 
-        <div class="character-card">
-            <img src="../part 3/images/sonic.jpg" alt="Sonic">
-            <h2>Sonic the Hedgehog</h2>
-            <p><strong>Game:</strong> Sonic the Hedgehog</p>
-            <p><strong>Description:</strong> A speedy blue hedgehog on a quest to stop Dr. Robotnik.</p>
-            <p><strong>Abilities:</strong> Super speed, agility, and spin attacks.</p>
-            <p><strong>Trivia:</strong> Sonic’s original design was based on a mix of a hedgehog and an armadillo.</p>
-        </div>
+            <!-- Sonic -->
+            <div class="character-card">
+                <div class="character-image">
+                    <img src="../part 3/images/sonic.jpg" alt="Sonic">
+                </div>
+                <div class="character-info">
+                    <h2>Sonic the Hedgehog</h2>
+                    <p><strong>Game:</strong> Sonic the Hedgehog</p>
+                    <p><strong>Description:</strong> A speedy blue hedgehog on a quest to stop Dr. Robotnik.</p>
+                    <p><strong>Abilities:</strong> Super speed, agility, and spin attacks.</p>
+                    <p><strong>Trivia:</strong> Sonic’s original design was based on a mix of a hedgehog and an armadillo.</p>
+                </div>
+            </div>
 
-        <div class="character-card">
-            <img src="../part 3/images/link.jpg" alt="Link">
-            <h2>Link</h2>
-            <p><strong>Game:</strong> The Legend of Zelda</p>
-            <p><strong>Description:</strong> A hero tasked with rescuing Princess Zelda and defeating Ganon.</p>
-            <p><strong>Abilities:</strong> Mastery of various weapons, puzzle-solving, and magic.</p>
-            <p><strong>Trivia:</strong> Link is often mistaken for Zelda, but he is the hero of the series.</p>
+            <!-- Link -->
+            <div class="character-card">
+                <div class="character-image">
+                    <img src="../part 3/images/link.jpg" alt="Link">
+                </div>
+                <div class="character-info">
+                    <h2>Link</h2>
+                    <p><strong>Game:</strong> The Legend of Zelda</p>
+                    <p><strong>Description:</strong> A hero tasked with rescuing Princess Zelda and defeating Ganon.</p>
+                    <p><strong>Abilities:</strong> Mastery of various weapons, puzzle-solving, and magic.</p>
+                    <p><strong>Trivia:</strong> Link is often mistaken for Zelda, but he is the hero of the series.</p>
+                </div>
+            </div>
         </div>
     </section>
-
+<!-- Footer Navigation Section -->
+<aside id="footer-navigation" class="footer-widget">
+    <h3 class="widget-title">Quick Links</h3>
+    <div class="menu-footer-container">
+        <ul class="menu">
+            <li class="menu-item"><a href="index.html">Home</a></li>
+            <li class="menu-item"><a href="characters.html">Characters</a></li>
+            <li class="menu-item"><a href="Games.html">Games</a></li>
+            <li class="menu-item"><a href="about.html">About Us</a></li>
+            <li class="menu-item"><a href="contact us.html">Contact Us</a></li>
+        </ul>
+    </div>
+</aside>
+    <!-- Footer -->
     <footer>
-        <p>Mauriciono © 2024</p>
+        <p>Video Game Character Hub © 2024</p>
     </footer>
+
 </body>
 </html>
