--- a/csce242/projects/part 5/index.html
+++ b/csce242/projects/part 5/index.html
@@ -6,7 +6,8 @@
     <title>Video Game Character Hub</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<<body class="homepage">
+    <!-- Navigation Bar -->
     <header>
         <nav>
             <ul>
@@ -17,60 +18,79 @@
             </ul>
         </nav>
     </header>
-    
-    <section class="centered">
-        <h1>Welcome to Video Game Character Hub</h1>
-        <p>Explore a world of iconic video game characters, their stories, and abilities.</p>
 
+    <!-- Main Section -->
+    <section class="intro-section">
+        <h1>Welcome to Video Game Character Hub</h1>
+        <p>Explore the fascinating world of iconic video game characters, their stories, and abilities.</p>
+    </section>
+
+    <!-- Featured Games Section -->
+    <section class="featured-section">
         <h2>Featured Video Games</h2>
-        <div class="featured-characters">
-            <div class="character-card">
-                <img src="../part 4/images/sonic frontiers.jpg" alt="Sonic frontiers">
-                <p>Sonic frontiers</p>
+        <div class="featured-grid">
+            <div class="featured-card">
+                <img src="images/sonic frontiers.jpg" alt="Sonic Frontiers">
+                <p>Sonic Frontiers</p>
             </div>
-            <div class="character-card">
-                <img src="../part 4/images/gta 6 frre dowload.jpg" alt="Link">
+            <div class="featured-card">
+                <img src="images/gta 6 frre dowload.jpg" alt="GTA 6">
                 <p>GTA 6</p>
             </div>
-            <div class="character-card">
-                <img src="../part 4/images/halo 3.jpg" alt="Halo 3">
+            <div class="featured-card">
+                <img src="images/halo 3.jpg" alt="Halo 3">
                 <p>Halo 3</p>
             </div>
         </div>
     </section>
 
-    <section>
+    <!-- Popular Characters Section -->
+    <section class="characters-section">
         <h2>Popular Characters</h2>
-        <div class="popular-characters">
+        <div class="character-grid">
             <div class="character-card">
-                <img src="../part 3/images/mario.jpg" alt="Mario">
+                <img src="images/mario.jpg" alt="Mario">
                 <h3>Mario</h3>
-                <p>Mario, the beloved plumber, has been saving the Mushroom Kingdom for decades.</p>
+                <p>The beloved plumber who saves the Mushroom Kingdom.</p>
             </div>
             <div class="character-card">
-                <img src="../part 3/images/sonic.jpg" alt="Sonic">
+                <img src="images/sonic.jpg" alt="Sonic">
                 <h3>Sonic the Hedgehog</h3>
-                <p>The fastest hedgehog around, Sonic is always ready for action!</p>
+                <p>The fastest hedgehog who loves adventure.</p>
             </div>
             <div class="character-card">
-                <img src="../part 3/images/link.jpg" alt="Link">
+                <img src="images/link.jpg" alt="Link">
                 <h3>Link</h3>
-                <p>The courageous hero of Hyrule, on a quest to save Princess Zelda.</p>
+                <p>The courageous hero on a quest to save Princess Zelda.</p>
             </div>
         </div>
     </section>
+           
 
-    <section>
-        <h2>Upcoming Games</h2>
-        <ul>
-            <li><strong>Super Mario Bros wonder</strong> - Release Date: 2024</li>
-            <li><strong>Sonic X Shadow Genereations</strong> - Release Date: 2024</li>
-            <li><strong>The Legend of Zelda: Breath of the Wild 2</strong> - Release Date: 2024</li>
-        </ul>
+    <!--  News or Updates section -->
+    <section class="news-section">
+        <h2>Latest updates</h2>
+        <p>Stay tuned for the latest updates on my website</p>
     </section>
 
+   <!-- Footer Navigation Section -->
+   <aside id="footer-navigation" class="footer-widget">
+    <h3 class="widget-title">Quick Links</h3>
+    <div class="menu-footer-container">
+        <ul class="menu">
+            <li class="menu-item"><a href="index.html">Home</a></li>
+            <li class="menu-item"><a href="characters.html">Characters</a></li>
+            <li class="menu-item"><a href="Games.html">Games</a></li>
+            <li class="menu-item"><a href="about.html">About Us</a></li>
+            <li class="menu-item"><a href="contact us.html">Contact Us</a></li>
+        </ul>
+    </div>
+</aside>
+
+    <!-- Footer -->
     <footer>
-        <p>Mauriciono © 2024</p>
+        <p>Video Game Character Hub © 2024</p>
     </footer>
+
 </body>
 </html>
