fixed webpage design

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -76,31 +76,29 @@
                     <p>This assignment focuses on JavaScript functionalities...</p>
                     <a href="assignments/assignment_06/index.html">View Assignment</a>
                 </div>
-        </section>
-    </main>
 
-               <!-- Assignment 7 -->
+                <!-- Assignment 7 -->
                 <div class="assignment">
-                    <h3>Assignment 7 - Javascript: loops</h3>
-                    <img src="images/Screenshot 2024-09-25 143109.jpg" alt="Assignment 07 loops">
+                    <h3>Assignment 7 - JavaScript: Loops</h3>
+                    <img src="images/Screenshot 2024-09-25 143109.jpg" alt="Assignment 07 Loops">
                     <p>This assignment focuses on loops</p>
                     <a href="assignments/assignment_07/index.html">View Assignment</a>
                 </div>
-        </section>  
 
-                    <!-- Assignment 8 -->
+                <!-- Assignment 8 -->
                 <div class="assignment">
-                    <h3>Assignment 8 - Javascript: Arrays</h3>
+                    <h3>Assignment 8 - JavaScript: Arrays</h3>
                     <img src="images/Screenshot 2024-09-25 143109.jpg" alt="Assignment 08 Arrays">
                     <p>This assignment focuses on loops</p>
                     <a href="assignments/assignment_08/index.html">View Assignment</a>
                 </div>
+            </div> <!-- Close .assignment-list div -->
         </section>
     </main>
 
     <!-- Footer Section -->
     <footer>
-      <p>@Mauriceiono.com</p>
+        <p>@Mauriceiono.com</p>
     </footer>
 </body>
 </html>
