--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -24,7 +24,6 @@
         <section class="projects">
             <h2>Projects</h2>
             <div class="project-list">
-
                 <!-- Project 1 -->
                 <div class="project">
                     <h3>Part 1 - Initial Topic (PDF)</h3>
@@ -47,27 +46,25 @@
                     <p>Click below to view the wireframe assignment in CSS and HTML</p>
                     <a href="part 3/index.html">View Wireframe</a>
                 </div>
+
+                <!-- Project 4 -->
+                <div class="project">
+                    <h3>Part 4 - Colors and More</h3>
+                    <img src="images/part 3 sc.jpg" alt="HTML & CSS assignment">
+                    <p>Click below to view the wireframe assignment in CSS and HTML</p>
+                    <a href="part 4/index.html">View Wireframe</a>
+                </div>
+
+                <!-- Project 5 -->
+                <div class="project">
+                    <h3>Part 5 - Improved Website</h3>
+                    <img src="images/part 3 sc.jpg" alt="Part 5 assignment">
+                    <p>Click below to view the improved wireframe assignment.</p>
+                    <a href="part 5/index.html">View Wireframe</a>
+                </div>
             </div> 
-
-              <!-- Project 4 -->
-            <div class="project">
-                <h3>Part 4 - colors and more</h3>
-                <img src="images/part 3 sc.jpg" alt="HTML & CSS assignment">
-                <p>Click below to view the wireframe assignment in CSS and HTML</p>
-                <a href="part 4/index.html">View Wireframe</a>
-            </div>
-        </div> 
-
-               <!-- Project 5 -->
-               <div class="project">
-                <h3>Part 5 - improved website</h3>
-                <img src="images/part 3 sc.jpg" alt="Part 5 assignment">
-                <p>Click below to view the improved wireframe assignment.</p>
-                <a href="part 5/index.html">View Wireframe</a>
-            </div>
-        </div> 
-    </section>
-</main>
+        </section>
+    </main>
 
     <!-- Footer Section -->
     <footer>
