--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -50,7 +50,7 @@
                 <!-- Project 4 -->
                 <div class="project">
                     <h3>Part 4 - Colors and More</h3>
-                    <img src="images/part 3 sc.jpg" alt="HTML & CSS assignment">
+                    <img src="images/Screenshot 2024-09-29 145141.jpg" alt="HTML & CSS assignment">
                     <p>Click below to view the wireframe assignment in CSS and HTML</p>
                     <a href="part 4/index.html">View Wireframe</a>
                 </div>
