--- a/csce242/projects/part 5/Games.html
+++ b/csce242/projects/part 5/Games.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="characters.html">Characters</a></li>
-                <li><a href="Games.html">Games</a></li>
+                <li><a href="Games.html">Games</a></li> <!-- Corrected "Games" -->
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
@@ -31,17 +31,17 @@
             </div>
             <div class="game-card">
                 <h2>Halo</h2>
-                <img src="images/halo3.jpg" alt="Master Chief" class="game-image">
+                <img src="images/halo 3.jpg" alt="Master Chief" class="game-image">
                 <p>A sci-fi shooter where you play as Master Chief, fighting to save humanity.</p>
             </div>
             <div class="game-card">
                 <h2>Sonic the Hedgehog</h2>
-                <img src="images/sonic.jpg" alt="Sonic the Hedgehog" class="game-image">
+                <img src="images/sonic frontiers.jpg" alt="Sonic the Hedgehog" class="game-image">
                 <p>Speed through levels as Sonic, battling Dr. Robotnik and saving animals.</p>
             </div>
             <div class="game-card">
                 <h2>The Legend of Zelda</h2>
-                <img src="images/zelda.jpg" alt="Link" class="game-image">
+                <img src="images/breath of wid.jpg" alt="Link" class="game-image">
                 <p>Embark on epic quests as Link, solving puzzles and battling monsters.</p>
             </div>
         </div>
@@ -75,19 +75,21 @@
             <p>Release Date: 2024</p>
         </div>
     </section>
-         <!-- Footer Navigation Section -->
-   <aside id="footer-navigation" class="footer-widget">
-    <h3 class="widget-title">Quick Links</h3>
-    <div class="menu-footer-container">
-        <ul class="menu">
-            <li class="menu-item"><a href="index.html">Home</a></li>
-            <li class="menu-item"><a href="characters.html">Characters</a></li>
-            <li class="menu-item"><a href="Games.html">Games</a></li>
-            <li class="menu-item"><a href="about.html">About Us</a></li>
-            <li class="menu-item"><a href="contact us.html">Contact Us</a></li>
-        </ul>
-    </div>
-</aside>
+    
+    <!-- Footer Navigation Section -->
+    <aside id="footer-navigation" class="footer-widget">
+        <h3 class="widget-title">Quick Links</h3>
+        <div class="menu-footer-container">
+            <ul class="menu">
+                <li class="menu-item"><a href="index.html">Home</a></li>
+                <li class="menu-item"><a href="characters.html">Characters</a></li>
+                <li class="menu-item"><a href="Games.html">Games</a></li> <!-- Corrected "Games" -->
+                <li class="menu-item"><a href="about.html">About Us</a></li>
+                <li class="menu-item"><a href="contact us.html">Contact Us</a></li>
+            </ul>
+        </div>
+    </aside>
+    
     <!-- Footer Section -->
     <footer>
         <p>&copy; Mauriciono 2024</p>
