--- a/csce242/projects/part 5/characters.html
+++ b/csce242/projects/part 5/characters.html
@@ -64,7 +64,7 @@
             <div class="character-card">
                 <img src="images/luigi.jpg" alt="Luigi">
                 <h3>Ganondorf</h3>
-                <p>Mario’s younger brother and loyal companion.</p>
+                <p>Link arch nemesis.</p>
                 <a href="character-details.html" class="view-details-btn">View Details</a>
             </div>
 
@@ -74,11 +74,18 @@
                 <p>Mario’s younger brother and loyal companion.</p>
                 <a href="character-details.html" class="view-details-btn">View Details</a>
             </div>
-            
+
             <div class="character-card">
-                <img src="images/tails.jpg" alt="Tails">
+                <img src="images//tails.jpg" alt="Tails">
                 <h3>Miles "Tails" Prower</h3>
                 <p>Sonic’s two-tailed fox friend and tech genius.</p>
+                <a href="character-details.html" class="view-details-btn">View Details</a>
+            </div>
+            
+            <div class="character-card">
+                <img src="images/fi zelda.jpg" alt="Tails">
+                <h3>Fi</h3>
+                <p>The master sword which link wields.</p>
                 <a href="character-details.html" class="view-details-btn">View Details</a>
             </div>
 
