--- a/csce242/projects/part 5/characters.html
+++ b/csce242/projects/part 5/characters.html
@@ -76,7 +76,7 @@
             </div>
 
             <div class="character-card">
-                <img src="images//tails.jpg" alt="Tails">
+                <img src="images/tails.jpg" alt="Tails">
                 <h3>Miles "Tails" Prower</h3>
                 <p>Sonic’s two-tailed fox friend and tech genius.</p>
                 <a href="character-details.html" class="view-details-btn">View Details</a>
