--- a/csce242/projects/part 5/characters.html
+++ b/csce242/projects/part 5/characters.html
@@ -62,7 +62,7 @@
             </div>
 
             <div class="character-card">
-                <img src="images/ganondorf.jpg" alt="Luigi">
+                <img src="images/ganondorf.jpg" alt="Ganondorf">
                 <h3>Ganondorf</h3>
                 <p>Link arch nemesis.</p>
                 <a href="character-details.html" class="view-details-btn">View Details</a>
