--- a/csce242/exercises/09_gallery/gallery.html
+++ b/csce242/exercises/09_gallery/gallery.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -5,7 +6,7 @@
             Author: Portia Plante
         -->
     <title>Arrays</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
