--- a/csce242/exercises/09_gallery/index.html
+++ b/csce242/exercises/09_gallery/index.html
@@ -5,7 +5,7 @@
             Author: Portia Plante
         -->
     <title>Arrays</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
@@ -19,6 +19,6 @@
         <img src="images/mango.jpg" class="hidden" />
         <img src="images/apple.jpg" class="hidden" />
       </section>
-          
+      <script src="script.js"></script>    
   </body>
 </html>
