--- a/csce242/exercises/10_classes/index.html
+++ b/csce242/exercises/10_classes/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>My Website</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
