--- a/csce242/exercises/10_classes/pictures.html
+++ b/csce242/exercises/10_classes/pictures.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <title>My Website</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
