--- a/csce242/projects/part 5/index.html
+++ b/csce242/projects/part 5/index.html
@@ -6,7 +6,7 @@
     <title>Video Game Character Hub</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<<body class="homepage">
+<body class="homepage">
     <!-- Navigation Bar -->
     <header>
         <nav>
