--- a/csce242/index.html
+++ b/csce242/index.html
@@ -92,6 +92,14 @@
                     <p>This assignment focuses on loops</p>
                     <a href="assignments/assignment_08/index.html">View Assignment</a>
                 </div>
+
+                <!-- Assignment 9 -->
+                <div class="assignment">
+                    <h3>Assignment 9 - JavaScript: Classes</h3>
+                    <img src="images/09 image.jpg" alt="Assignment 07 Loops">
+                    <p>This assignment focuses on loops</p>
+                    <a href="assignments/assignment_09/index.html">View Assignment</a>
+                </div>
             </div> <!-- Close .assignment-list div -->
         </section>
     </main>
