updating project part 5

--- a/csce242/projects/part 5/Games.html
+++ b/csce242/projects/part 5/Games.html
@@ -76,32 +76,32 @@
         <div class="releases-grid">
             <div class="release-card">
                 <h3>Tekken 8</h3>
-                <img src="https://picsum.photos/200" alt="Tekken 8 Cover" class="release-image">
+                <img src="images/tekken 8.jpg" alt="Tekken 8 Cover" class="release-image">
                 <p>Release Date: 2024</p>
             </div>
             <div class="release-card">
                 <h3>The Last of Us Part 2 Remastered</h3>
-                <img src="https://picsum.photos/200" alt="The Last of Us Remastered Cover" class="release-image">
+                <img src="images/Lastofus2.jpg" alt="The Last of Us Remastered Cover" class="release-image">
                 <p>Release Date: 2024</p>
             </div>
             <div class="release-card">
                 <h3>Palworld</h3>
-                <img src="https://picsum.photos/200" alt="Palworld Cover" class="release-image">
+                <img src="images/palworld.jpg" alt="Palworld Cover" class="release-image">
                 <p>Release Date: 2024</p>
             </div>
             <div class="release-card">
                 <h3>Starfield</h3>
-                <img src="https://picsum.photos/200" alt="Starfield Cover" class="release-image">
+                <img src="images/starfield.jpg" alt="Starfield Cover" class="release-image">
                 <p>Release Date: 2023</p>
             </div>
             <div class="release-card">
                 <h3>Cyberpunk 2077: Phantom Liberty</h3>
-                <img src="https://picsum.photos/200" alt="Cyberpunk DLC Cover" class="release-image">
+                <img src="images/Cyberpunk.jpg" alt="Cyberpunk DLC Cover" class="release-image">
                 <p>Release Date: 2023</p>
             </div>
             <div class="release-card">
                 <h3>Spider-Man 2</h3>
-                <img src="https://picsum.photos/200" alt="Spider-Man 2 Cover" class="release-image">
+                <img src="images/spider2.jpg" alt="Spider-Man 2 Cover" class="release-image">
                 <p>Release Date: 2023</p>
             </div>
         </div>
