--- a/csce242/projects/part 5/about.html
+++ b/csce242/projects/part 5/about.html
@@ -101,8 +101,8 @@
             <p>Follow us on:</p>
             <ul class="social-media">
                 <li><a href="#"><img src="images/ig logo.jpg" alt="Social Media 1"></a></li>
-                <li><a href="#"><img src="images/ig logo.jpg" alt="Social Media 2"></a></li>
-                <li><a href="#"><img src="images/ig logo.jpg" alt="Social Media 3"></a></li>
+                <li><a href="#"><img src="images/x.jpg" alt="Social Media 2"></a></li>
+                <li><a href="#"><img src="images/face.jpg" alt="Social Media 3"></a></li>
             </ul>
             <p>Video Game Character Hub © 2024. All Rights Reserved.</p>
         </div>
