--- a/csce242/projects/part 5/index.html
+++ b/csce242/projects/part 5/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1 class="site-title">Video Game Character Hub</h1>
         <nav>
-            <button class="hamburger" aria-label="Toggle navigation">
+            <button class="hamburger" aria-label="Toggle navigation" aria-expanded="false">
                 &#9776; <!-- Hamburger icon -->
             </button>
             <ul class="nav-list"> <!-- Added class nav-list -->
@@ -100,8 +100,8 @@
             <p>Follow us on:</p>
             <ul class="social-media">
                 <li><a href="#"><img src="images/ig logo.jpg" alt="Social Media 1"></a></li>
-                <li><a href="#"><img src="images/ig logo.jpg" alt="Social Media 2"></a></li>
-                <li><a href="#"><img src="images/ig logo.jpg" alt="Social Media 3"></a></li>
+                <li><a href="#"><img src="images/x.jpg" alt="Social Media 2"></a></li>
+                <li><a href="#"><img src="images/face.jpg" alt="Social Media 3"></a></li>
             </ul>
             <p>Video Game Character Hub © 2024. All Rights Reserved.</p>
         </div>
