--- a/csce242/index.html
+++ b/csce242/index.html
@@ -89,7 +89,7 @@
                 <div class="assignment">
                     <h3>Assignment 8 - JavaScript: Arrays</h3>
                     <img src="images/Screenshot 2024-09-29 145010.jpg" alt="Assignment 08 Arrays">
-                    <p>This assignment focuses on loops</p>
+                    <p>This assignment focuses on Arrays</p>
                     <a href="assignments/assignment_08/index.html">View Assignment</a>
                 </div>
 
@@ -97,8 +97,16 @@
                 <div class="assignment">
                     <h3>Assignment 9 - JavaScript: Classes</h3>
                     <img src="images/09 image.jpg" alt="Assignment 07 Loops">
-                    <p>This assignment focuses on loops</p>
+                    <p>This assignment focuses on classes</p>
                     <a href="assignments/assignment_09/index.html">View Assignment</a>
+                </div>
+
+                <!-- Assignment 10 -->
+                <div class="assignment">
+                    <h3>Assignment 10 - Parsing Json </h3>
+                    <img src="images/Screenshot 2024-09-29 145010.jpg" alt="Assignment 10 Arrays">
+                    <p>This assignment focuses on Parsing Json</p>
+                    <a href="assignments/assignment_10/index.html">View Assignment</a>
                 </div>
             </div> <!-- Close .assignment-list div -->
         </section>
