--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -58,9 +58,17 @@
                 <!-- Project 5 -->
                 <div class="project">
                     <h3>Part 5 - Improved Website</h3>
+                    <img src="images/part 5 img.jpg" alt="Part 5 assignment">
+                    <p>Click below to view the improved wireframe assignment.</p>
+                    <a href="part 5/index.html">View Website</a>
+                </div>
+
+                <!-- Project 6 -->
+                <div class="project">
+                    <h3>Part 6 - Improved Website</h3>
                     <img src="images/part 3 sc.jpg" alt="Part 5 assignment">
                     <p>Click below to view the improved wireframe assignment.</p>
-                    <a href="part 5/index.html">View Wireframe</a>
+                    <a href="part 6/index.html">View Website</a>
                 </div>
             </div> 
         </section>
