updating projects section

--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -65,9 +65,9 @@
 
                 <!-- Project 6 -->
                 <div class="project">
-                    <h3>Part 6 - Improved Website</h3>
-                    <img src="images/part 3 sc.jpg" alt="Part 5 assignment">
-                    <p>Click below to view the improved wireframe assignment.</p>
+                    <h3>Part 6 - Json File Parsing</h3>
+                    <img src="images/part 5 img.jpg" alt="Part 5 assignment">
+                    <p>Click below to view the Json file assignment.</p>
                     <a href="part 6/index.html">View Website</a>
                 </div>
             </div> 
