updated assingment 10 picture

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -104,7 +104,7 @@
                 <!-- Assignment 10 -->
                 <div class="assignment">
                     <h3>Assignment 10 - Parsing Json </h3>
-                    <img src="images/Screenshot 2024-09-29 145010.jpg" alt="Assignment 10 Arrays">
+                    <img src="images/assi 10.jpg" alt="Assignment 10 Json">
                     <p>This assignment focuses on Parsing Json</p>
                     <a href="assignments/assignment_10/index.html">View Assignment</a>
                 </div>
