updated json parsing for project 6

--- a/csce242/projects/part 6/index.html
+++ b/csce242/projects/part 6/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -49,29 +51,12 @@
     </section>
 
     <!-- Popular Characters Section -->
-<section class="characters-section">
-    <h2>Popular Characters</h2>
-    <div class="character-grid">
-        <div class="character-card">
-            <img src="images/mario.jpg" alt="Mario">
-            <h3>Mario</h3>
-            <p>The beloved plumber who saves the Mushroom Kingdom.</p>
-            <a href="character-details.html?character=mario" class="view-details-link">View Details</a> <!-- Added link -->
+    <section class="characters-section">
+        <h2>Popular Characters</h2>
+        <div class="character-grid">
+            <!-- Characters will be dynamically populated here -->
         </div>
-        <div class="character-card">
-            <img src="images/sonic.jpg" alt="Sonic">
-            <h3>Sonic the Hedgehog</h3>
-            <p>The fastest hedgehog who loves adventure.</p>
-            <a href="character-details.html?character=sonic" class="view-details-link">View Details</a> <!-- Added link -->
-        </div>
-        <div class="character-card">
-            <img src="images/link.jpg" alt="Link">
-            <h3>Link</h3>
-            <p>The courageous hero on a quest to save Princess Zelda.</p>
-            <a href="character-details.html?character=link" class="view-details-link">View Details</a> <!-- Added link -->
-        </div>
-    </div>
-</section>
+    </section>
 
            
 
