--- a/csce242/projects/part 6/index.html
+++ b/csce242/projects/part 6/index.html
@@ -54,7 +54,7 @@
     <section class="characters-section">
         <h2>Popular Characters</h2>
         <div class="character-grid">
-            <!-- Characters will be dynamically populated here -->
+            <!-- Characters will be shown here -->
         </div>
     </section>
 
