--- a/csce242/index.html
+++ b/csce242/index.html
@@ -108,6 +108,17 @@
                     <p>This assignment focuses on Parsing Json</p>
                     <a href="assignments/assignment_10/index.html">View Assignment</a>
                 </div>
+
+                <!-- Assignment 11 -->
+                <div class="assignment">
+                    <h3>Assignment 11 - Server Side Hello world</h3>
+                    <img src="images/local host.jpg" alt="Assignment 07 Loops">
+                    <p>This assignment tasked us with creating a hello-world website using Node.js.</p>
+                    <div class="project-links">
+                        <a href="https://github.com/mauriceiono/git-node1.git" target="_blank">Code Repo</a>
+                        <a href="https://hello-world-whfy.onrender.com/" target="_blank">Live Demo</a>
+                    </div>
+                </div>
             </div> <!-- Close .assignment-list div -->
         </section>
     </main>
