--- a/csce242/index.html
+++ b/csce242/index.html
@@ -96,7 +96,7 @@
                 <!-- Assignment 9 -->
                 <div class="assignment">
                     <h3>Assignment 9 - JavaScript: Classes</h3>
-                    <img src="images/09 image.jpg" alt="Assignment 07 Loops">
+                    <img src="images/09 image.jpg" alt="Assignment 09 Javascript">
                     <p>This assignment focuses on classes</p>
                     <a href="assignments/assignment_09/index.html">View Assignment</a>
                 </div>
@@ -112,11 +112,21 @@
                 <!-- Assignment 11 -->
                 <div class="assignment">
                     <h3>Assignment 11 - Server Side Hello world</h3>
-                    <img src="images/local host.jpg" alt="Assignment 07 Loops">
+                    <img src="images/local host.jpg" alt="Assignment 11 Hello world">
                     <p>This assignment tasked us with creating a hello-world website using Node.js.</p>
                     <div class="project-links">
                         <a href="https://github.com/mauriceiono/git-node1.git" target="_blank">Code Repo</a>
                         <a href="https://hello-world-whfy.onrender.com/" target="_blank">Live Demo</a>
+                    </div>
+                </div>
+
+                <!-- Assignment 12 -->
+                <div class="assignment">
+                    <h3>Assignment 12 - React App</h3>
+                    <img src="images/react app shot.jpg" alt="Assignment 12 React App">
+                    <p>This assignment tasked us with creating a hello-world website using Node.js.</p>
+                    <div class="project-links">
+                        <a href="https://github.com/mauriceiono/node-helloworld.git" target="_blank">Code Repo</a>
                     </div>
                 </div>
             </div> <!-- Close .assignment-list div -->
